--- a/.env
+++ b/.env
@@ -33,7 +33,7 @@ MAIL_HOST=rsweb.com.br
 MAIL_PORT=465
 MAIL_USERNAME=comercial@rsweb.com.br
 MAIL_PASSWORD="nisexandi2"
-MAIL_ENCRYPTION=
+MAIL_ENCRYPTION=ssl
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
